--- a/products.html
+++ b/products.html
@@ -5,8 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn-icons-png.flaticon.com/512/714/714032.png" rel="icon" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Eagle</title>
   </head>
-  <body> </body>
+  <body> 
+    <header class="header">
+      <div class="header__wrap">
+        <div class="header__left">
+          <button class="header__button-sider"><i class="fa-solid fa-bars"></i></button>
+          <form class="header__search" action="">
+            <input type="text" placeholder="Search here...">
+            <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+          </form>
+        </div>
+        <div class="header__right">
+          <div class="header__buttons">
+            <ul>
+              <li> <span><i class="fa-regular fa-sun"></i></span></li>
+              <li> <span><i class="fa-regular fa-bell"></i></span></li>
+              <li> <span><i class="fa-regular fa-comment"></i></span></li>
+            </ul>
+          </div>
+          <div class="header__user">
+            <div class="header__user-avatar"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEp5IrJqdtZ8jFHUAbxj9RL7Ni-C6tXtuHvQ&amp;s"></div>
+            <div class="header__user-title">
+              <h3>Giang Trường</h3><span>Admin</span>
+            </div>
+          </div>
+          <button class="header__setting"><i class="fa-solid fa-gear"></i></button>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
