box head và breacrumb

--- a/products.html
+++ b/products.html
@@ -38,7 +38,7 @@
         </div>
       </div>
     </header>
-    <div class="main"> 
+    <div class="body"> 
       <nav class="sider">
         <div class="sider__wrap">
           <div class="sider__menu">
@@ -64,6 +64,29 @@
           </div>
         </div>
       </nav>
+      <div class="main">
+        <div class="box-head">
+          <div class="box-head__wrap">
+            <div class="box-head__left">
+              <h1 class="box-head__title">DANH SÁCH SẢN PHẨM</h1>
+            </div>
+            <div class="box-head__right">
+              <div class="breadcrumb">
+                <div class="breadcrumb__wrap">
+                  <ul> 
+                    <li> <a href="#">Dashboard </a></li>
+                    <li> <a href="#">Sản phẩm </a></li>
+                    <li> <a href="#">Danh sách sản phẩm </a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="products">
+          <div class="products_wrap"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
