tạm xong table danh sách sản phẩm

--- a/products.html
+++ b/products.html
@@ -50,16 +50,16 @@
           <div class="sider__menu">
             <div class="sider__menu-title">ALL PAGE </div>
             <ul> 
-              <li><a class="true" href="#"><i class="fa-solid fa-cart-shopping"></i>  Product</a></li>
-              <li><a class="true" href="#"><i class="fa-solid fa-layer-group"></i>  Category</a></li>
-              <li><a class="true" href="#"><i class="fa-regular fa-user"></i>  User</a></li>
-              <li><a class="true" href="#"><i class="fa-solid fa-user-plus"></i>  Roles</a></li>
+              <li><a class="true" href="#"><i class="fa-solid fa-cart-shopping"></i>  Sản Phẩm</a></li>
+              <li><a class="true" href="#"><i class="fa-solid fa-layer-group"></i>  Danh Mục</a></li>
+              <li><a class="true" href="#"><i class="fa-regular fa-user"></i>  Tài khoản</a></li>
+              <li><a class="true" href="#"><i class="fa-solid fa-user-plus"></i>  Nhóm Quyền</a></li>
             </ul>
           </div>
           <div class="sider__menu">
             <div class="sider__menu-title">SETTING </div>
             <ul> 
-              <li><a class="true" href="#"><i class="fa-solid fa-gear"></i>  Setting </a></li>
+              <li><a class="true" href="#"><i class="fa-solid fa-gear"></i>  Cài đặt </a></li>
             </ul>
           </div>
         </div>
@@ -75,16 +75,87 @@
                 <div class="breadcrumb__wrap">
                   <ul> 
                     <li> <a href="#">Dashboard </a></li>
-                    <li> <a href="#">Sản phẩm </a></li>
-                    <li> <a href="#">Danh sách sản phẩm </a></li>
+                    <li> <a href="#">Sản Phẩm </a></li>
+                    <li> <a href="#">Danh Sách Sản Phẩm </a></li>
                   </ul>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="products">
-          <div class="products_wrap"></div>
+        <div class="card">
+          <div class="card__head">
+            <div class="filter"><i class="fa-solid fa-sliders"></i></div>
+          </div>
+          <div class="card__body">
+            <table class="table"> 
+              <thead class="table__head">
+                <tr> 
+                  <th>Sản Phẩm </th>
+                  <th>Danh Mục</th>
+                  <th>Số Lượng</th>
+                  <th>Giá</th>
+                  <th>Trạng Thái</th>
+                  <th> </th>
+                </tr>
+              </thead>
+              <tbody class="table__body">
+                <tr> 
+                  <td class="table__title"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKdEUA91tfYGjoTgBW-vRTz6mynjBNgu-tMA&amp;s" alt="Phía sau nghi can x">
+                    <h3>Phía sau nghi can x</h3>
+                  </td>
+                  <td>Đang Cập Nhật</td>
+                  <td> <span class="badge badge--active">50 In Stock</span>
+                  </td>
+                  <td>1,452.500 VND</td>
+                  <td> <span class="badge badge--active">Hoạt động</span>
+                  </td>
+                  <td>
+                     <i class="fa-solid fa-ellipsis-vertical"></i></td>
+                </tr>
+                <tr> 
+                  <td class="table__title"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKdEUA91tfYGjoTgBW-vRTz6mynjBNgu-tMA&amp;s" alt="Phía sau nghi can x">
+                    <h3>Phía sau nghi can x</h3>
+                  </td>
+                  <td>Đang Cập Nhật</td>
+                  <td> <span class="badge badge--active">50 In Stock</span>
+                  </td>
+                  <td>1,452.500 VND</td>
+                  <td> <span class="badge badge--active">Hoạt động</span>
+                  </td>
+                  <td>
+                     <i class="fa-solid fa-ellipsis-vertical"></i></td>
+                </tr>
+                <tr> 
+                  <td class="table__title"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKdEUA91tfYGjoTgBW-vRTz6mynjBNgu-tMA&amp;s" alt="Phía sau nghi can x">
+                    <h3>Phía sau nghi can x</h3>
+                  </td>
+                  <td>Đang Cập Nhật</td>
+                  <td> <span class="badge badge--active">50 In Stock</span>
+                  </td>
+                  <td>1,452.500 VND</td>
+                  <td> <span class="badge badge--active">Hoạt động</span>
+                  </td>
+                  <td>
+                     <i class="fa-solid fa-ellipsis-vertical"></i></td>
+                </tr>
+                <tr> 
+                  <td class="table__title"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZlv9AxXdlrzKkbCJxBFiJJdOE7UcwevFAuw&amp;s" alt="Bí mật của naoke">
+                    <h3>Bí mật của naoke</h3>
+                  </td>
+                  <td>Đang Cập Nhật</td>
+                  <td> <span class="badge badge--inactive">Out of Stock</span>
+                  </td>
+                  <td>666.99 VND</td>
+                  <td> <span class="badge badge--inactive">Dừng hoạt động</span>
+                  </td>
+                  <td>
+                     <i class="fa-solid fa-ellipsis-vertical"></i></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="card__footer"></div>
         </div>
       </div>
     </div>
