xong trang danh sách sản phẩm

--- a/products.html
+++ b/products.html
@@ -84,11 +84,30 @@
           </div>
         </div>
         <div class="card">
-          <div class="card__head"></div>
+          <div class="card__head">
+            <div class="card__head-wrap">
+              <div class="card__head-left">
+                <div class="filter">
+                  <div class="filter__icon"><i class="fa-solid fa-sliders"></i></div>
+                </div>
+                <form class="form form__search" action="#">
+                  <input type="text" placeholder="Search here..."/>
+                  <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                </form>
+              </div>
+              <div class="card__head-right">
+                <div class="button button__outline">
+                  <i class="fa-solid fa-plus"></i>  THÊM MỚI</div>
+              </div>
+            </div>
+          </div>
           <div class="card__body">
             <table class="table"> 
               <thead class="table__head">
                 <tr> 
+                  <td> 
+                    <input class="checkbox" type="checkbox" name="">
+                  </td>
                   <th>Sản Phẩm </th>
                   <th>Danh Mục</th>
                   <th>Số Lượng</th>
@@ -99,6 +118,9 @@
               </thead>
               <tbody class="table__body">
                 <tr> 
+                  <td> 
+                    <input class="checkbox" type="checkbox" name="">
+                  </td>
                   <td class="table__title"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKdEUA91tfYGjoTgBW-vRTz6mynjBNgu-tMA&amp;s" alt="Phía sau nghi can x">
                     <h3>Phía sau nghi can x</h3>
                   </td>
@@ -112,6 +134,9 @@
                      <i class="fa-solid fa-ellipsis-vertical"></i></td>
                 </tr>
                 <tr> 
+                  <td> 
+                    <input class="checkbox" type="checkbox" name="">
+                  </td>
                   <td class="table__title"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKdEUA91tfYGjoTgBW-vRTz6mynjBNgu-tMA&amp;s" alt="Phía sau nghi can x">
                     <h3>Phía sau nghi can x</h3>
                   </td>
@@ -125,6 +150,9 @@
                      <i class="fa-solid fa-ellipsis-vertical"></i></td>
                 </tr>
                 <tr> 
+                  <td> 
+                    <input class="checkbox" type="checkbox" name="">
+                  </td>
                   <td class="table__title"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKdEUA91tfYGjoTgBW-vRTz6mynjBNgu-tMA&amp;s" alt="Phía sau nghi can x">
                     <h3>Phía sau nghi can x</h3>
                   </td>
@@ -138,6 +166,9 @@
                      <i class="fa-solid fa-ellipsis-vertical"></i></td>
                 </tr>
                 <tr> 
+                  <td> 
+                    <input class="checkbox" type="checkbox" name="">
+                  </td>
                   <td class="table__title"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZlv9AxXdlrzKkbCJxBFiJJdOE7UcwevFAuw&amp;s" alt="Bí mật của naoke">
                     <h3>Bí mật của naoke</h3>
                   </td>
