trang chi tiet san pham -admin

--- a/products.html
+++ b/products.html
@@ -97,7 +97,7 @@
               </div>
               <div class="card__head-right">
                 <div class="button button__outline">
-                  <i class="fa-solid fa-plus"></i>  THÊM MỚI</div>
+                  <i class="fa-solid fa-plus"></i>  Thêm Mới</div>
               </div>
             </div>
           </div>
