trang danh sachs nhom quyen

--- a/account-edit.html
+++ b/account-edit.html
@@ -6,7 +6,7 @@
     <link href="https://cdn-icons-png.flaticon.com/512/714/714032.png" rel="icon" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Thêm Mới Tài Khoản</title>
+    <title>Chỉnh Sửa Tài Khoản</title>
   </head>
   <body> 
     <header class="header">
