--- a/products.html
+++ b/products.html
@@ -86,10 +86,11 @@
         <div class="card">
           <div class="card__head">
             <div class="card__head-wrap">
+              <div class="filter"><span class="filter__title">
+                   <i class="fa-solid fa-filter"></i>  Bộ lọc tìm kiếm</span>
+                <div class="filter__list"><span class="filter__list-item">Tất cả</span><span class="filter__list-item">Hoạt động</span><span class="filter__list-item">Dừng hoạt động</span><span class="filter__list-item"><i class="fa-solid fa-rotate-right"></i></span></div>
+              </div>
               <div class="card__head-left">
-                <div class="filter">
-                  <div class="filter__icon"><i class="fa-solid fa-sliders"></i></div>
-                </div>
                 <form class="form form__search" action="#">
                   <input type="text" placeholder="Search here..."/>
                   <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
