--- a/permissions.html
+++ b/permissions.html
@@ -89,7 +89,7 @@
               <div class="card__head-wrap">
                 <div class="card__head-left">
                   <form class="form form__search" action="#">
-                    <input type="text" placeholder="Search here..."/>
+                    <input type="text" placeholder="Tìm kiếm ở đây..."/>
                     <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                   </form>
                 </div>
