--- a/product-edit.html
+++ b/product-edit.html
@@ -68,7 +68,7 @@
         <div class="box-head">
           <div class="box-head__wrap">
             <div class="box-head__left">
-              <h1 class="box-head__title">THÊM MỚI SẢN PHẨM</h1>
+              <h1 class="box-head__title">CHỈNH SỬA SẢN PHẨM</h1>
             </div>
             <div class="box-head__right">
               <div class="breadcrumb">
@@ -76,7 +76,7 @@
                   <ul> 
                     <li> <a href="#">Dashboard </a></li>
                     <li> <a href="#">Sản Phẩm </a></li>
-                    <li> <a href="#">Thêm Mới Sản Phẩm </a></li>
+                    <li> <a href="#">Chỉnh sửa Sản Phẩm </a></li>
                   </ul>
                 </div>
               </div>
@@ -85,11 +85,11 @@
         </div>
         <div class="card">
           <div class="card__body">
-            <form class="form form__create" action="#">  
+            <form class="form form__create" action="#" method="">  
               <div class="form__left">
                 <div class="form__item">
                   <label class="label" for="">Tên Sản Phẩm </label>
-                  <input type="text" placeholder="Nhập Tên Của Sản Phẩm">
+                  <input type="text" placeholder="Nhập Tên Của Sản Phẩm" value="Phía sau nghi can x">
                 </div>
                 <div class="form__item">
                   <label class="label" for="">Danh Mục Sản Phẩm</label>
@@ -101,23 +101,23 @@
                 </div>
                 <div class="form__item">
                   <label class="label" for="">Mô tả Sản Phẩm</label>
-                  <textarea name="" rows="5" placeholder="Mô Tả Sản Phẩm Của Bạn..."></textarea>
+                  <textarea name="" rows="5" placeholder="Mô Tả Sản Phẩm Của Bạn...">“Việc nghĩ ra một bài toán vô cùng khó và việc giải bài toán đó, việc nào khó hơn?” Khi nhấn chuông cửa nhà nghi can chính của một vụ án mới, điều tra viên Kusanagi không biết rằng anh sắp phải đương đầu với một thiên tài ẩn dật. Kusanagi càng không thể ngờ rằng, chỉ một câu nói vô thưởng vô phạt của anh đã kéo người bạn thân, Manabu Yukawa, một phó giáo sư vật lý tài năng, vào vụ án. Và điều làm sững sờ nhất, đó là vụ án kia chẳng qua cũng chỉ như một bài toán cấp ba đơn giản, tuy nhiên ấn số X khi được phơi bày ra lại không đem đến hạnh phúc cho bất cứ ai… Với một giọng văn tỉnh táo và dung dị, Higashino Keigo đã đem đến cho độc giả hơn cả một cuốn tiểu thuyết trinh thám. Mô tả tội ác không phải điều hấp dẫn nhất ở đây, mà còn là những giằng xé nội tâm thầm kín, những nhân vật bình dị, và sự quan tâm sâu sa tới con người. Tác phẩm đã đem lại cho Higashino Keigo Giải Naoki lần thứ 134, một giải thưởng văn học lâu đời sánh ngang giải Akutagawa tại Nhật.</textarea>
                 </div>
                 <div class="form__item">
                   <label class="label" for="">Giá</label>
-                  <input type="text" placeholder="Nhập Giá Của Sản Phẩm">
+                  <input type="text" placeholder="Nhập Giá Của Sản Phẩm" value="1,452.500">
                 </div>
                 <div class="form__item">
                   <label class="label" for="">Giảm giá</label>
-                  <input type="text" placeholder="Nhập % Giảm Giá Của Sản Phẩm">
+                  <input type="text" placeholder="Nhập % Giảm Giá Của Sản Phẩm" value="10">
                 </div>
                 <div class="form__item">
                   <label class="label" for="">Số lượng</label>
-                  <input type="text" placeholder="Nhập Số Lượng Của Sản Phẩm">
+                  <input type="text" placeholder="Nhập Số Lượng Của Sản Phẩm" value="50">
                 </div>
                 <div class="form__item">
                   <label class="label" for="">Vị trí</label>
-                  <input type="text" placeholder="Nhập Vị Trí Của Sản Phẩm">
+                  <input type="text" placeholder="Nhập Vị Trí Của Sản Phẩm" value="1">
                 </div>
               </div>
               <div class="form__right">
