--- a/products.html
+++ b/products.html
@@ -88,11 +88,12 @@
             <div class="card__head-wrap">
               <div class="filter"><span class="filter__title">
                    <i class="fa-solid fa-filter"></i>  Bộ lọc tìm kiếm</span>
-                <div class="filter__list"><span class="filter__list-item">Tất cả</span><span class="filter__list-item">Hoạt động</span><span class="filter__list-item">Dừng hoạt động</span><span class="filter__list-item"><i class="fa-solid fa-rotate-right"></i></span></div>
+                <div class="filter__list"><span class="filter__item " button-filter-status="">Tất cả</span><span class="filter__item filter__item--active" button-filter-status="active">Hoạt động</span><span class="filter__item " button-filter-status="inactive">Dừng hoạt động</span><span class="filter__item" button-reset-all="button-reset-all"><i class="fa-solid fa-rotate-right"></i></span>
+                </div>
               </div>
               <div class="card__head-left">
                 <form class="form form__search" action="#">
-                  <input type="text" placeholder="Search here..."/>
+                  <input type="text" placeholder="Tìm kiếm ở đây..."/>
                   <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
               </div>
@@ -107,7 +108,7 @@
               <thead class="table__head">
                 <tr> 
                   <td> 
-                    <input class="checkbox" type="checkbox" name="">
+                    <input class="checkbox-tick" type="checkbox" name="">
                   </td>
                   <th>Sản Phẩm </th>
                   <th>Danh Mục</th>
@@ -120,64 +121,80 @@
               <tbody class="table__body">
                 <tr> 
                   <td> 
-                    <input class="checkbox" type="checkbox" name="">
+                    <input class="checkbox-tick" type="checkbox" name="">
                   </td>
                   <td class="table__title"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKdEUA91tfYGjoTgBW-vRTz6mynjBNgu-tMA&amp;s" alt="Phía sau nghi can x">
                     <h3>Phía sau nghi can x</h3>
                   </td>
                   <td>Đang Cập Nhật</td>
-                  <td> <span class="badge badge--active">50 In Stock</span>
+                  <td> <span class="badge badge--active">50 Trong Kho</span>
                   </td>
                   <td>1,452.500 VND</td>
-                  <td> <span class="badge badge--active">Hoạt động</span>
+                  <td> <span class="badge badge--active" button-status="active">Hoạt động</span>
                   </td>
                   <td>
                      <i class="fa-solid fa-ellipsis-vertical"></i></td>
                 </tr>
                 <tr> 
                   <td> 
-                    <input class="checkbox" type="checkbox" name="">
+                    <input class="checkbox-tick" type="checkbox" name="">
                   </td>
                   <td class="table__title"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKdEUA91tfYGjoTgBW-vRTz6mynjBNgu-tMA&amp;s" alt="Phía sau nghi can x">
                     <h3>Phía sau nghi can x</h3>
                   </td>
                   <td>Đang Cập Nhật</td>
-                  <td> <span class="badge badge--active">50 In Stock</span>
+                  <td> <span class="badge badge--active">50 Trong Kho</span>
                   </td>
                   <td>1,452.500 VND</td>
-                  <td> <span class="badge badge--active">Hoạt động</span>
+                  <td> <span class="badge badge--active" button-status="active">Hoạt động</span>
                   </td>
                   <td>
                      <i class="fa-solid fa-ellipsis-vertical"></i></td>
                 </tr>
                 <tr> 
                   <td> 
-                    <input class="checkbox" type="checkbox" name="">
+                    <input class="checkbox-tick" type="checkbox" name="">
                   </td>
                   <td class="table__title"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKdEUA91tfYGjoTgBW-vRTz6mynjBNgu-tMA&amp;s" alt="Phía sau nghi can x">
                     <h3>Phía sau nghi can x</h3>
                   </td>
                   <td>Đang Cập Nhật</td>
-                  <td> <span class="badge badge--active">50 In Stock</span>
+                  <td> <span class="badge badge--active">50 Trong Kho</span>
                   </td>
                   <td>1,452.500 VND</td>
-                  <td> <span class="badge badge--active">Hoạt động</span>
+                  <td> <span class="badge badge--active" button-status="active">Hoạt động</span>
                   </td>
                   <td>
                      <i class="fa-solid fa-ellipsis-vertical"></i></td>
                 </tr>
                 <tr> 
                   <td> 
-                    <input class="checkbox" type="checkbox" name="">
+                    <input class="checkbox-tick" type="checkbox" name="">
                   </td>
                   <td class="table__title"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZlv9AxXdlrzKkbCJxBFiJJdOE7UcwevFAuw&amp;s" alt="Bí mật của naoke">
                     <h3>Bí mật của naoke</h3>
                   </td>
                   <td>Đang Cập Nhật</td>
-                  <td> <span class="badge badge--inactive">Out of Stock</span>
+                  <td> <span class="badge badge--inactive">Hết hàng</span>
                   </td>
                   <td>666.99 VND</td>
-                  <td> <span class="badge badge--inactive">Dừng hoạt động</span>
+                  <td> <span class="badge badge--inactive" button-status="inactive">Dừng hoạt động</span>
+                  </td>
+                  <td>
+                     <i class="fa-solid fa-ellipsis-vertical"></i></td>
+                </tr>
+                <tr> 
+                  <td> 
+                    <input class="checkbox-tick" type="checkbox" name="">
+                  </td>
+                  <td class="table__title"><img src="https://bizweb.dktcdn.net/thumb/large/100/197/269/products/83eab7a387b88b9209f41000e6735c02.jpg?v=1703572315407" alt="HBR ON BUSINESS MODEL INNOVATION - Đổi Mới Mô Hình Kinh Doanh">
+                    <h3>HBR ON BUSINESS MODEL INNOVATION - Đổi Mới Mô Hình Kinh Doanh</h3>
+                  </td>
+                  <td>Đang Cập Nhật</td>
+                  <td> <span class="badge badge--inactive">Hết hàng</span>
+                  </td>
+                  <td>666.99 VND</td>
+                  <td> <span class="badge badge--inactive" button-status="inactive">Dừng hoạt động</span>
                   </td>
                   <td>
                      <i class="fa-solid fa-ellipsis-vertical"></i></td>
@@ -200,5 +217,6 @@
         </div>
       </div>
     </div>
+    <script src="js/script.js"></script>
   </body>
 </html>
