--- a/roles.html
+++ b/roles.html
@@ -91,7 +91,7 @@
                   <div class="filter__icon"><i class="fa-solid fa-sliders"></i></div>
                 </div>
                 <form class="form form__search" action="#">
-                  <input type="text" placeholder="Search here..."/>
+                  <input type="text" placeholder="Tìm kiếm ở đây..."/>
                   <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
               </div>
