form-search tìm kiếm

--- a/accounts.html
+++ b/accounts.html
@@ -90,7 +90,7 @@
                 <div class="filter">
                   <div class="filter__icon"><i class="fa-solid fa-sliders"></i></div>
                 </div>
-                <form class="form form__search" action="#">
+                <form class="form form__search" action="#" method="GET" form-search="form-search">
                   <input type="text" placeholder="Tìm kiếm ở đây..."/>
                   <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
