--- a/products.html
+++ b/products.html
@@ -92,8 +92,8 @@
                 </div>
               </div>
               <div class="card__head-left">
-                <form class="form form__search" action="#">
-                  <input type="text" placeholder="Tìm kiếm ở đây..."/>
+                <form class="form form__search" action="#" method="GET" form-search="form-search">
+                  <input type="text" placeholder="Tìm kiếm ở đây..." value=""/>
                   <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
               </div>
