--- a/permissions.html
+++ b/permissions.html
@@ -88,7 +88,7 @@
             <div class="card__head">
               <div class="card__head-wrap">
                 <div class="card__head-left">
-                  <form class="form form__search" action="#">
+                  <form class="form form__search" action="#" method="GET" form-search="form-search">
                     <input type="text" placeholder="Tìm kiếm ở đây..."/>
                     <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                   </form>
