--- a/products.html
+++ b/products.html
@@ -84,7 +84,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="card__head">
+          <div class="card__head"> 
             <div class="card__head-wrap">
               <div class="filter"><span class="filter__title">
                    <i class="fa-solid fa-filter"></i>  Bộ lọc tìm kiếm</span>
@@ -205,12 +205,18 @@
           <div class="card__footer">
             <div class="card__footer-left"></div>
             <div class="card__footer-right">
-              <ul class="pagination">
-                <li> <a class="pagination__item pagination__item-icon" href="#"><i class="fa-solid fa-angle-left"></i></a></li>
-                <li> <a class="pagination__item pagination__item--active" href="#">1</a></li>
-                <li> <a class="pagination__item" href="#">2</a></li>
-                <li> <a class="pagination__item" href="#">3</a></li>
-                <li> <a class="pagination__item pagination__item-icon" href="#"><i class="fa-solid fa-angle-right"></i></a></li>
+              <ul class="pagination" pagination-block="pagination-block">
+                <li> <a class="pagination__item pagination__item-icon" href="javascript:;" pagination-item="6"><i class="fa-solid fa-angle-left"></i></a></li>
+                <li> <a class="pagination__item pagination__item-icon
+                            
+                            " href="#" pagination-item="6">6</a></li>
+                <li> <a class="pagination__item pagination__item-icon
+                            pagination__item--active
+                            " href="#" pagination-item="7">7</a></li>
+                <li> <a class="pagination__item pagination__item-icon
+                            
+                            " href="#" pagination-item="8">8</a></li>
+                <li> <a class="pagination__item pagination__item-icon" href="javascript:;" pagination-item="8"><i class="fa-solid fa-angle-right"></i></a></li>
               </ul>
             </div>
           </div>
