thay đổi trạng thái sản phẩm

--- a/products.html
+++ b/products.html
@@ -130,7 +130,7 @@
                   <td> <span class="badge badge--active">50 Trong Kho</span>
                   </td>
                   <td>1,452.500 VND</td>
-                  <td> <span class="badge badge--active" button-status="active">Hoạt động</span>
+                  <td> <span class="badge badge--active" button-status-id="65e9ad24841aed5173b59dd3" button-status="active">Hoạt động</span>
                   </td>
                   <td>
                      <i class="fa-solid fa-ellipsis-vertical"></i></td>
@@ -146,7 +146,7 @@
                   <td> <span class="badge badge--active">50 Trong Kho</span>
                   </td>
                   <td>1,452.500 VND</td>
-                  <td> <span class="badge badge--active" button-status="active">Hoạt động</span>
+                  <td> <span class="badge badge--active" button-status-id="65e9ad24841aed5173b59dd4" button-status="active">Hoạt động</span>
                   </td>
                   <td>
                      <i class="fa-solid fa-ellipsis-vertical"></i></td>
@@ -162,7 +162,7 @@
                   <td> <span class="badge badge--active">50 Trong Kho</span>
                   </td>
                   <td>1,452.500 VND</td>
-                  <td> <span class="badge badge--active" button-status="active">Hoạt động</span>
+                  <td> <span class="badge badge--active" button-status-id="65e9ad24841aed5173b59dd5" button-status="active">Hoạt động</span>
                   </td>
                   <td>
                      <i class="fa-solid fa-ellipsis-vertical"></i></td>
@@ -178,7 +178,7 @@
                   <td> <span class="badge badge--inactive">Hết hàng</span>
                   </td>
                   <td>666.99 VND</td>
-                  <td> <span class="badge badge--inactive" button-status="inactive">Dừng hoạt động</span>
+                  <td> <span class="badge badge--inactive" button-status-id="65e9ad24841aed5173b59dd6" button-status="inactive">Dừng hoạt động</span>
                   </td>
                   <td>
                      <i class="fa-solid fa-ellipsis-vertical"></i></td>
@@ -194,7 +194,7 @@
                   <td> <span class="badge badge--inactive">Hết hàng</span>
                   </td>
                   <td>666.99 VND</td>
-                  <td> <span class="badge badge--inactive" button-status="inactive">Dừng hoạt động</span>
+                  <td> <span class="badge badge--inactive" button-status-id="65e9ad24841aed5173b59dda" button-status="inactive">Dừng hoạt động</span>
                   </td>
                   <td>
                      <i class="fa-solid fa-ellipsis-vertical"></i></td>
@@ -220,6 +220,7 @@
               </ul>
             </div>
           </div>
+          <form class="hidden" action="#" method="POST" form-change-status="form-change-status"></form>
         </div>
       </div>
     </div>
